@@ -25,6 +25,7 @@ Job: "ttH2015"
   HistoChecks: NOCRASH
   SplitHistoFiles: TRUE   % set this in order to have separated .root files in Histograms/ for different regions
   ImageFormat: "png"
+%   StatOnly: TRUE
 
 % --------------- %
 % ---  FIT    --- %
@@ -33,9 +34,7 @@ Job: "ttH2015"
 Fit: "fit"
   FitType: SPLUSB
   FitRegion: CRSR
-%   StatOnly: TRUE
 %   FitBlind: TRUE
-%   StatOnly: TRUE
 
 % --------------- %
 % ---  LIMIT    --- %
