@@ -1,3 +1,6 @@
+2016-01-09 Loic Valery <lvalery@cern.ch>
+        * Moved StatOnly flag from Fit to Job block
+
 2016-01-08 Michele Pinamonti <michele.pinamonti@gmail.com>
         * Fixing problems with reference systematics & one-sided symmetrisation
         * ConfigParser: spaces before % now allowed
